<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">PizzaOrder</string>
    <string name="action_settings">Settings</string>
    <string name="name">Enter Your Name Below:</string>
    <string name="toppings">Toppings:</string>
    <string name="whipped_cream">Onions</string>
    <string name="chocolate">Chicken</string>
    <string name="quantity">Quantity:</string>
    <string name="initial_quantity_value">2</string>
    <string name="order">Order</string>
    <string name="order_summary_name">Name:<xliff:g example="Vijaya" id="name">%s</xliff:g></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="order_summary_whipped_cream">Add Whipped Cream? <xliff:g example="yes" id="addWhippedCream">%s</xliff:g></string>
    <string name="order_summary_chocolate">Add chocolate? <xliff:g example="yes" id="addChocolate">%s</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>
    <string name="order_summary_total_price">Total: $ <xliff:g example="10" id="price">%.2f</xliff:g></string>
    <string name="thank_you">Thank you!</string>
    <string name="too_much_coffee">Please select less than one hundred pizza</string>
    <string name="too_little_coffee">Please select atleast one pizza</string>
</resources>
