<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:label="@string/app_name"
    android:background="@drawable/bg"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".HomePage">

        <TextView
            style="@style/HeaderTextStyle"
            android:text="Enter Your Name Below:"
            android:textColor="#F44336"
            android:layout_marginBottom="1dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/user_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2sp"
            android:layout_marginBottom="2sp"
            android:inputType="textCapWords" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings"
            android:textColor="#F44336"
            android:textSize="28sp" />

        <CheckBox
            android:id="@+id/whipped_cream_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/whipped_cream"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/olives_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="Olives"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/tomatoes_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="Tomatoes"
            android:textSize="18sp" />


        <CheckBox
            android:id="@+id/chocolate_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/chocolate"
            android:textSize="18sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity"
            android:textColor="#F44336"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginRight="8dp"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/initial_quantity_value"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:onClick="increment"
                android:text="+" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:background="#009688"
                android:onClick="sendEmail"
                android:text="Order"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Button
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:background="#009688"
                android:onClick="submitOrder"
                android:text="Summary" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>